--- a/css/evaluationObject.css
+++ b/css/evaluationObject.css
@@ -5,10 +5,11 @@
 }
 .object .navTree{
     overflow: hidden;
+    margin: 0 20px;
+    padding-bottom: 20px;
 }
 .object .navTree .itemList{
     overflow: hidden;
-    margin: 30px 0;
 }
 .object .navTree .itemList .itemTit{
     overflow: hidden;
