--- a/css/evaluationPlan.css
+++ b/css/evaluationPlan.css
@@ -1,4 +1,4 @@
-.plan .checkCon{margin: 0 20px}
+.plan .checkCon{margin: 0 20px;padding-bottom: 30px}
 .plan .checkCon .checkItem{margin-bottom: 60px}
 .plan .checkCon .checkItem .itemTime {
     display: flex;
