--- a/css/management.css
+++ b/css/management.css
@@ -1,4 +1,4 @@
-.management .manageCon{margin: 0 20px}
+.management .manageCon{margin: 0 20px;padding-bottom: 10px}
 .management .manageCon .itemTit{
     overflow: hidden;
     font-size: 16px;
@@ -35,7 +35,7 @@
     justify-content: center;
     align-items: center;
 }
-.management .manageCon .manageItem .item p img{display: inline-block;margin-left: 10px;width: 20px}
+.management .manageCon .manageItem .item p img{display: inline-block;margin-left: 10px;width: 20px;cursor: pointer}
 .management .manageCon .manageItem .item ul{
     border: solid 1px #d8dce5;
     min-height: 400px;
@@ -50,7 +50,7 @@
     border-bottom: solid 1px #d8dce5;
 }
 .management .manageCon .manageItem .itemPic{margin: 0 20px}
-.management .manageCon .manageItem .itemPic img{width: 24px}
+.management .manageCon .manageItem .itemPic img{width: 24px;cursor: pointer}
 .management .manageCon .manageItem .itemList1{
     overflow: hidden;
     display: flex;
