--- a/css/evaluationPlan.css
+++ b/css/evaluationPlan.css
@@ -11,7 +11,7 @@
     font-size: 16px;
 }
 .plan .checkCon .checkItem .itemTime input{
-    width: 50px;
+    width: 70px;
     height: 28px;
     border: solid 1px #d8dce5;
     resize: none;
@@ -47,4 +47,5 @@
     width: 50px;
     padding: 5px 10px;
     margin-right: 10px;
+    text-align: center;
 }
