--- a/css/evaluationModel.css
+++ b/css/evaluationModel.css
@@ -23,6 +23,7 @@
     text-align: center;
     margin: 0 30px 0 0;
     border-bottom: solid 4px transparent;
+    cursor: pointer;
 }
 .model .modelCon .tabList ul li.checked{
     border-bottom: solid 4px #13aaf6;
