--- a/css/index.css
+++ b/css/index.css
@@ -73,27 +73,40 @@
     margin: 25px 0;
 }
 .index .rightCon .tabCon{width: 100%}
-.index .tabCon .table{overflow: hidden;width: 100%}
-.index .tabCon table{
+.index .tabCon .table {
     overflow: hidden;
+    width: 100%
+}
+.index .tabCon table{
     width: 100%;
     margin: 0 auto;
-    max-height: 517px;
     display: table;
 }
 .index .tabCon table thead{
     background: #eee;
+    width: 100%;
+    display: block;
+    padding-right: 2%;
 }
 .index .tabCon table tbody{
+    overflow-x: hidden;
+    overflow-y: scroll;
+    display: block;
     width: 100%;
 }
 .index .tabCon table tr:last-child{border-bottom:none}
+.index .tabCon table tr{
+    display: flex;
+    justify-content: space-between;
+}
 .index .tabCon table tr td,.index .tabCon table tr th{
     font-size: 12px;
     padding: 10px;
     border-bottom: 1px solid #d8dce5;
     text-align: center;
+    width: 17.5%;
 }
+.index .tabCon table tr th:first-child,.index .tabCon table tr td:first-child{width: 30%}
 .index .rightCon .tabCon table tr td:last-child,.index .rightCon .tabCon table tr th:last-child{text-align: left}
 .index .tabCon table tr th{font-size: 14px;}
 .index .tabCon table tr td span{
