--- a/css/template.css
+++ b/css/template.css
@@ -203,7 +203,7 @@ body{
 #nav ul li{
     display: block;
     position: relative;
-    padding: 0 0 40px 0;
+    padding: 0 0 30px 0;
 }
 #nav ul li a{
     overflow: hidden;
@@ -245,6 +245,10 @@ body{
 #nav ul li span.ic5{
     background: url("../images/template/icon5.png") no-repeat center center;
     background-size: 65px 65px;
+}
+#nav ul li span.ic6{
+    background: url("../images/template/icon6.png") no-repeat center center;
+    background-size: 70px 70px;
 }
 #content{
     padding: 110px 30px 0 215px;
